--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 
 ### Database Configurations
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create
 spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/grocery
 spring.datasource.username=root
 spring.datasource.password=
@@ -11,3 +11,8 @@ spring.jpa.show-sql: true
 spring.mvc.pathmatch.matching-strategy=ant-path-matcher
 
 secret=groceryAppAbhiAndHarshil
+
+spring.servlet.multipart.enabled=true
+spring.servlet.multipart.file-size-threshold=2KB
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=10MB
